# gmail-auto-cleanup

./: .gitignore  Makefile  README.md  config.yaml.example  pyproject.toml
docs/: architecture.md
docs/superpowers/plans/: 2026-06-18-dashboard.md
scripts/: run-weekly.ps1  run-weekly.sh  sdd-helper.py
src/gmail_cleanup/: __init__.py  __main__.py  ai_providers.py  ai_summary.py  analytics.py  config.py  dashboard.py  imap_utils.py  layer1.py
tests/: test_analytics.py  test_dashboard.py  test_imap_utils.py  test_layer1.py
