[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gmail-cleanup"
version = "1.0.0"
description = "Automated, AI-enhanced email cleanup and Primary Inbox analysis system for Gmail"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Adrian Sadrian", email = "sadrian94@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "keyring>=24.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
ai = [
    "google-genai>=0.1.0",
]
test = [
    "pytest>=7.0.0",
]

[project.scripts]
gmail-cleanup = "gmail_cleanup.__main__:main"
